# sensor_calib_tools

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt  package.xml
app/: extract_floor_plane.cpp  test_dr_lidar_calib.cpp  test_dr_lidar_calib_node.cpp  test_extract_image_features.cpp  test_extract_lidar_feature.cpp  test_file_io.cpp  test_handeye_calib.cpp  test_main.cpp  test_show_tool.cpp  test_show_tool_3d.cpp  test_show_tools.cpp
assets/CarModels/CN01/camera/: avm_front_transform.pb.txt  rear_medium_transform.pb.txt
assets/CarModels/CN01/lidar/: roof_front_transform.pb.txt
config/: config_calib.yaml  config_dr_lidar_calib.yaml  config_handeye_calib.yaml  config_show_tool.yaml
devel/: .catkin
devel/lib/dr_lidar_calib/: multi_dr_lidar_calib  segmentation
devel/lib/pkgconfig/: dr_lidar_calib.pc
devel/share/dr_lidar_calib/cmake/: dr_lidar_calibConfig.cmake
dr_lidar_calib/: CMakeLists.txt
dr_lidar_calib/config/: config_dr_lidar_calib.yaml
dr_lidar_calib/include/: multi_dr_lidar_calib.hpp
dr_lidar_calib/launch/: multi_dr_lidar_calib.launch  multi_lidar_cameras.launch
dr_lidar_calib/src/: intensity_segmentation.cpp  multi_dr_lidar_calib.cpp
include/: common.h  cost_function.hpp  dr_lidar_calib.h  eigen_types.hpp  exrtace_image_feature.h  extract_lidar_feature.h  extract_lidar_feature.hpp  file_io.h  floor_plane_constriant.h  handeye.h  lidar_compensation.h  linear_interpolater.hpp  linear_interpolater_trait.hpp  match_features.h  multi_dr_lidar_calib.hpp  multi_lidars_calib.h  pose_local_parameterization.h  pose_optimization.h  pose_refine.hpp  sensor_extrinsic.pb.h  show_tools.h
include/BA/: tools.hpp
launch/: multi_dr_lidar_calib.launch  multi_lidar_cameras.launch
src/: calib_result_node.cpp  common.cpp  dr_lidar_calib.cpp  extract_lidar_feature.cpp  file_io.cpp  floor_plane_constriant.cpp  handeye.cpp  intensity_segmentation.cpp  lidar_compensation.cpp  lidar_odometry.cpp  match_features.cpp  multi_dr_lidar_calib.cpp  multi_lidars_calib.cpp  pose_local_parameterization.cpp  pose_optimization.cpp  sensor_extrinsic.pb.cc  show_tools.cpp
src/dr_lidar_calib/: CMakeLists.txt
src/dr_lidar_calib/app/: extract_floor_plane.cpp  extract_lidar_feature.cpp  test_dr_lidar_calib.cpp  test_extract_floor_plane.cpp  test_extract_lidar_feature.cpp  test_main.cpp  test_show_tools.cpp
src/dr_lidar_calib/assets/CarModels/CN01/camera/: avm_left_transform.pb.txt  avm_rear_transform.pb.txt  avm_right_transform.pb.txt  front_near_transform.pb.txt
src/dr_lidar_calib/config/: config_calib.yaml  config_dr_lidar_calib.yaml  config_show_tools.yaml
src/dr_lidar_calib/include/: common.h  common.hpp  cost_function.hpp  dr_lidar_calib.h  eigen_types.hpp  exrtace_image_feature.h  extract_lidar_feature.h  extract_lidar_feature.hpp  file_io.h  floor_plane_constriant.h  lidar_odometry.h  match_features.h  multi_lidars_calib.h  pose_local_parameterization.h  pose_refine.hpp  sensor_extrinsic.pb.h  show_tools.h
src/dr_lidar_calib/include/BA/: ba.hpp
src/dr_lidar_calib/src/: check_calib_result.cpp  dr_lidar_calib.cpp  extract_image_feature.cpp  extract_lidar_feature.cpp  file_io.cpp  floor_plane_constriant.cpp  handeye.cpp  lidar_compensation.cpp  lidar_odometry.cpp  match_features.cpp  multi_lidars_calib.cpp  pose_local_parameterization.cpp  pose_optimization.cpp  show_tools.cpp
